--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
 members = [
-    "egui_node_graph",
-    "egui_node_graph_example",
+    "yew_node_graph",
+    "yew_node_graph_example",
 ]
