--- a/yew_node_graph/Cargo.toml
+++ b/yew_node_graph/Cargo.toml
@@ -19,7 +19,7 @@ slotmap = { version = "1.0" }
 smallvec = { version = "1.7.0" }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 thiserror = "1.0"
-glam = "0.22.0"
+glam = {version = "0.22.0", features = ["serde"]}
 stylist = { version = "0.12", features = ["yew_integration", "yew"] }
 wasm-bindgen = "0.2.83"
 web-sys = "0.3.60"
