--- a/yew_node_graph/Cargo.toml
+++ b/yew_node_graph/Cargo.toml
@@ -16,6 +16,7 @@ persistence = ["serde", "slotmap/serde", "smallvec/serde"]
 
 [dependencies]
 glam = {version = "0.22.0", features = ["serde"]}
+log = "0.4.17"
 serde = {version = "1.0", optional = true, features = ["derive"]}
 slotmap = {version = "1.0"}
 smallvec = {version = "1.7.0"}
@@ -23,5 +24,4 @@ stylist = {version = "0.12", features = ["yew_integration", "yew"]}
 thiserror = "1.0"
 wasm-bindgen = "0.2.83"
 web-sys = "0.3.60"
-
 yew = "0.20.0"
