--- a/yew_node_graph_example/Cargo.toml
+++ b/yew_node_graph_example/Cargo.toml
@@ -3,6 +3,9 @@ edition = "2021"
 name = "yew-node-graph_example"
 version = "0.1.0"
 
+[build]
+target = "thumbv7m-none-eabi"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
