--- a/yew_node_graph/Cargo.toml
+++ b/yew_node_graph/Cargo.toml
@@ -24,5 +24,5 @@ smallvec = {version = "1.7.0"}
 stylist = {version = "0.12", features = ["yew_integration", "yew"]}
 thiserror = "1.0"
 wasm-bindgen = "0.2.83"
-web-sys = {version = "0.3.60", features = ["DomRect", "Element", "UiEvent", "Node", "HtmlElement"]}
+web-sys = {version = "0.3.61", features = ["DomRect", "Element", "UiEvent"]}
 yew = "0.20.0"
