--- a/yew_node_graph_example/Cargo.toml
+++ b/yew_node_graph_example/Cargo.toml
@@ -11,6 +11,8 @@ target = "thumbv7m-none-eabi"
 [dependencies]
 anyhow = "1.0.68"
 log = "0.4.17"
+# wasm-bindgen = "0.2.83"
 wasm-logger = "0.2.0"
+web-sys = "0.3.61"
 yew = {version = "0.20.0", features = ["csr"]}
 yew_node_graph = {path = "../yew_node_graph"}
