--- a/yew_node_graph/Cargo.toml
+++ b/yew_node_graph/Cargo.toml
@@ -26,3 +26,5 @@ thiserror = "1.0"
 wasm-bindgen = "=0.2.83"
 web-sys = {version = "=0.3.60", features = ["DomRect", "Element", "UiEvent"]}
 yew = "0.20.0"
+
+aquamarine = "0.3.0"
